added new featured n images

--- a/WebContent/AdminDashboard.html
+++ b/WebContent/AdminDashboard.html
@@ -63,6 +63,7 @@
     <a href="pending"> <button class="btn btn-warning" style="margin-left:80px;"  >Show Pending Projects</button></a>
       <a href="approved"> <button class="btn btn-primary" style="margin-left:80px;">Show Approved Projects</button></a>
       <a href="rejected"> <button class="btn btn-danger" style="margin-left:80px;">Show Rejected Projects</button></a>
+      <a href="showallprojects"> <button class="btn btn-primary" style="margin-left:80px;">Show All Projects</button></a>
     
     
   </div>
