--- a/WebContent/Login.html
+++ b/WebContent/Login.html
@@ -17,6 +17,10 @@ header {
 	padding: 30px 30px 60px 300px;
 }
 
+.lol {
+	background-color: #C8D7DB;
+}
+
 ul {
 	padding: 0px 300px 300px 0px;
 }
@@ -90,14 +94,12 @@ a {
 
 <body>
 	<header>
-
-		<h1>
-			<a href="index.html"
-				style="text-decoration: none; color: white; padding-left: 20%;">Project
-				Management System </a>
-		</h1>
-
-
+		<div id="lol">
+			<h1>
+				<a href="index.html"
+					style="text-decoration: none; color: white; padding-left: 20%;">Project
+					Management System </a>
+			</h1>
 	</header>
 
 
@@ -145,7 +147,7 @@ a {
 			</center>
 		</div>
 	</form>
-
+	</div>
 </body>
 
 </html>
