--- a/WebContent/projectupdatesuccess.html
+++ b/WebContent/projectupdatesuccess.html
@@ -38,6 +38,13 @@ body {
 	padding-left: 25%;
 }
 
+body{
+	background-image: url(img/tick.png);
+	background-position: right center;
+	background-repeat: no-repeat;
+	background-size: 180px,250px;
+}
+
 
 </style>
 </head>
