--- a/WebContent/ProjectsAddedSuccessfully.html
+++ b/WebContent/ProjectsAddedSuccessfully.html
@@ -37,6 +37,14 @@ body {
 	padding-top: 25px;
 	padding-left: 25%;
 }
+
+
+body{
+	background-image: url(img/pending.png);
+	background-position: right center;
+	background-repeat: no-repeat;
+	background-size: 180px,250px;
+}
 </style>
 </head>
 
