--- a/WebContent/AdminDashboard.html
+++ b/WebContent/AdminDashboard.html
@@ -34,7 +34,7 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="Login.html">Logout	&nbsp;<span class="glyphicon glyphicon-off"></span></a></li>
+          <li><a href="index.html">Logout	&nbsp;<span class="glyphicon glyphicon-off"></span></a></li>
       </ul>
          
       
