--- a/WebContent/ProjectsAddedSuccessfully.html
+++ b/WebContent/ProjectsAddedSuccessfully.html
@@ -56,7 +56,7 @@ body{
 			</div>
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="Login.html">Back</a></li>
+				<li><a href="dashboard.jsp">Back</a></li>
 			</ul>
 
 		</div>
